# sentier_data_tools

./: .cruft.json  .gitignore  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: conda-package-deploy.yml  python-test.yml
conda.recipe/: meta.yaml
docs/: conf.py  environment.yaml  index.md
sentier_data_tools/: __init__.py  common.py  data_source_base.py  datapackage.py  example_model.py  iri.py  licenses.py  local_data_store.py  logs.py  patch_pandas.py  unit_conversion.py  utils.py
sentier_data_tools/datapackage/: __init__.py  datapackage.py  validation.py
sentier_data_tools/example/: __init__.py  data.py  electrolyzers.xlsx  model.py
sentier_data_tools/example_data/: electrolyzers.xlsx
sentier_data_tools/iri/: __init__.py  main.py  utils.py
sentier_data_tools/local_storage/: __init__.py  datasource.py  db.py  enum_field.py  fields.py
sentier_data_tools/model/: __init__.py  arguments.py  base.py
tests/: __init__.py  conftest.py  test_iri.py  test_iri_utils.py
tests/integration/: test_product_iri.py
tests/iri/: test_main.py  test_utils.py
