[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentier_data_tools"
authors = [
  { name="Chris Mutel", email="cmutel@gmail.com" }
]
maintainers = [
  { name="Chris Mutel", email="cmutel@gmail.com" }
]
description = "Basic tools to test and interact with Sentier.dev vocabulary and data systems"
readme = "README.md"
dynamic = ["version"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.11"
dependencies = [
    "openpyxl",
    "pandas",
    "peewee",
    "peewee-enum-field",
    "platformdirs",
    "pyarrow",
    "pydantic",
    "rdflib",
    "rfc3987",
    "SPARQLWrapper",
    "structlog",
]

[project.urls]
source = "https://github.com/sentier-dev/sentier_data_tools"
homepage = "https://github.com/sentier-dev/sentier_data_tools"
tracker = "https://github.com/sentier-dev/sentier_data_tools/issues"

[project.optional-dependencies]
# Getting recursive dependencies to work is a pain, this
# seems to work, at least for now
testing = [
    "sentier_data_tools",
    "pytest",
    "pytest-cov",
    "python-coveralls"
]
dev = [
    "build",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "setuptools",
]

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = true
packages = [
    "sentier_data_tools",
    "sentier_data_tools.datapackage",
    "sentier_data_tools.example",
    "sentier_data_tools.iri",
    "sentier_data_tools.local_storage",
]

[tool.setuptools.dynamic]
version = {attr = "sentier_data_tools.__version__"}

[tool.pytest.ini_options]
addopts = "--cov sentier_data_tools --cov-report term-missing --verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests/*.py"]

[tool.flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = ["E203", "W503"]
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
